# qualytics-cli

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  connections.yml.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bump-version-and-publish.yml  ci.yml  publish-to-pypi.yml  publish.yml  release.yml
docs/: anomalies.md  checks.md  computed-fields.md  computed-tables.md  connections.md  datastores.md  export-import.md  getting-started.md  mcp-server.md  operations.md
docs/examples/: github-actions-promotion.md
qualytics/: config.py  connections.yml  qualytics.py  setup.py
qualytics/api/: anomalies.py  client.py  computed_fields.py  connections.py  containers.py  datastores.py  operations.py  quality_checks.py  tags.py  teams.py  users.py
qualytics/cli/: __init__.py  anomalies.py  auth.py  checks.py  computed_tables.py  connections.py  containers.py  datastores.py  doctor.py  export_import.py  generate_driver.py  logo.py  main.py  mcp_cmd.py  operations.py  progress.py  schedule.py  tags.py  teams.py  users.py
qualytics/config/: config.yml  connections.yml  env-example.txt
qualytics/mcp/: __init__.py  server.py
qualytics/services/: __init__.py  connections.py  containers.py  datastores.py  export_import.py  operations.py  quality_checks.py
qualytics/utils/: __init__.py  file_ops.py  secrets.py  serialization.py  validation.py  yaml_loader.py
tests/: conftest.py  test_anomalies.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_connections.py  test_containers.py  test_datastores.py  test_export_import.py  test_mcp.py  test_operations.py  test_quality_checks.py  test_serialization.py
