[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qualytics-cli"
version = "0.1.19"
description = "Qualytics CLI"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Qualytics", email = "devops@qualytics.co"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["Qualytics", "Data Quality"]
dependencies = [
    "typer",
    "requests",
    "pyjwt",
    "croniter",
    "typing-extensions",
    "rich",
    "shellingham",
    "click",
    "python-dotenv",
    "pyyaml",
    "urllib3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "bump2version",
]

[project.urls]
Homepage = "https://www.qualytics.co/"
GitHub = "https://github.com/Qualytics/qualytics-cli"
Userguide = "https://qualytics.github.io/userguide/"

[project.scripts]
qualytics = "qualytics.qualytics:app"

[tool.setuptools.packages.find]
include = ["qualytics*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E231", "E402", "E702", "E501", "F403", "F541", "E713"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["qualytics"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.2",
    "bump2version>=1.0.0",
]
